// Copyright (c) 2022, Mysten Labs, Inc.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package sui.validator;

import "common.proto";

// The Validator interface
service Validator {
    rpc Transaction (common.BincodeEncodedPayload) returns (common.BincodeEncodedPayload) {}
    rpc ConfirmationTransaction (common.BincodeEncodedPayload) returns (common.BincodeEncodedPayload) {}
    rpc ConsensusTransaction (common.BincodeEncodedPayload) returns (common.BincodeEncodedPayload) {}
    rpc AccountInfo (common.BincodeEncodedPayload) returns (common.BincodeEncodedPayload) {}
    rpc ObjectInfo (common.BincodeEncodedPayload) returns (common.BincodeEncodedPayload) {}
    rpc TransactionInfo (common.BincodeEncodedPayload) returns (common.BincodeEncodedPayload) {}
    rpc BatchInfo (common.BincodeEncodedPayload) returns (stream common.BincodeEncodedPayload) {}
    rpc Checkpoint (common.BincodeEncodedPayload) returns (common.BincodeEncodedPayload) {}
}
